# Object-Centric-Super-Variants

./: .gitignore  Between_Variant_Summarization.py  Branching_Approach_Partitions.py  Branching_Approach_Powerset.py  First Approaches.ipynb  ILP_Example.ipynb  Input_Extraction_Definition.py  Inter_Lane_Alignment.py  Inter_Lane_Summarization.py  Inter_Variant_Generation.py  Inter_Variant_Summarization.py  Intra_Variant_Generation.py  Intra_Variant_Summarization.py  Main.py  OCEL_example.jsonocel  Plot_Examples.ipynb  Summarization_Selection.py  Summarization_Utils.py  Super Variant Spanning Tree.ipynb  Super_Variant_Definition.py  Super_Variant_Generation.py  Super_Variant_Hierarchy.py  Super_Variant_Visualization.py  Variant_Visualization.py  Within-Variant_Summarization.py  Within_Variant_Selection.py  Within_Variant_Summarization.py  Within_Variant_Summarization_Visualization  Within_Variant_Visualization.py  __init__.py  pyproject.toml
EventLogs/: BPI2017-Top10.jsonocel  CSV_test.csv  OCEL_example.jsonocel  OCEL_example_largeModel.jsonocel  Presentation_example.jsonocel  order_process_indexed.csv
Jupyter Notebook/: First Approaches.ipynb  Super Variant Spanning Tree.ipynb
Old Approaches/: Branching_Approach_Powerset.py  Propagative_Summarization_Approach.py  Summarization_Utils.py
