[tool.poetry]
name = "object-centric-super-variants"
version = "0.1.0"
description = ""
authors = ["Tim Edelmann <tim.edelmann@campus.lmu.de>"]

[tool.poetry.dependencies]
python = "^3.11"
ocpa = "^1.3.3"
gurobipy = "^12.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
